--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,13 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2
-      - name: Change directory
-        run: cd app
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
