--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,6 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./app
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2
@@ -13,3 +10,5 @@ jobs:
         run: npm install
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
+          with:
+            working-directory: app
